# Phaktionz-CLI

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  deb-make  gitcmd  install  mykey.asc  phaktionz.deb  phaktionz_0.3.3.dsc  plan.ods  temp
.github/workflows/: pre-release.yml  release.yml  rust.yml
phaktionz/DEBIAN/: control
snap/: snapcraft.yaml
src/: cat_info.rs  ct.rs  ep.rs  eptemp.txt  inf.rs  info.rs  main.rs  prof_char.rs  profiles.rs  proftemp.txt  rules.rs  story.rs
