[package]
name = "phaktionz"
version = "0.5.3"
authors = ["mustafif0929@gmail.com <mustafif0929@gmail.com>"]
edition = "2018"
description = "A Command Line Version of the Phaktionz TCG Book"
license = "MIT"
documentation = "https://phaktionz.mkproj.com/book/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
mkproj-lib = "0.1.13"
run_script = "0.7.0"
